--- a/docs-www/gatsby-docs-kit.yml
+++ b/docs-www/gatsby-docs-kit.yml
@@ -1,42 +1,25 @@
-- title: Home
-  dir: ./src
-  url: /
-  file: pages/landing.js
-
-- title: DOCS
+- title: git
   dir: ../docs
-  url: docs
+  url: /docs
   sidemenu:
-    - title: Getting Started
-      dir: getting-started
+    - title: git服务器
+      dir: gitlab
       items:
-        - title: Overview
-          file: introduction.md
-        - title: Installation
-          file: installation.md
-        - title: Creating your site
-          file: creating-site.md
-        - title: Publishing your site
-          file: publishing.md
-    - title: Guides
-      dir: guides
+        - title: gitlab
+          file: gitlab.md
+    - title: git客户端
+      dir: git-client
       items:
-        - title: Markdown features
-          file: markdown-features.md
-        - title: Custom markdown pages
-          file: custom-markdown-pages.md
-        - title: Custom Gatsby page
-          file: custom-gatsby-page.md
-        - title: Custom Markdown template
-          file: custom-markdown-template.md
-        - title: Custom layout
-          file: custom-layout.md
-    - title: API
-      dir: api
+        - title: gitextensions
+          file: gitextensions.md
+        - title: sourcetree
+          file: sourcetree.md
+- title: Parse-ext
+  dir: ../docs
+  url: /docs
+  sidemenu:
+    - title: 接口文档
+      dir: parse-ext
       items:
-        - title: CLI commands
+        - title: 接口文档
           file: cli-commands.md
-        - title: Navigation config
-          file: pages-config.md
-        - title: Gatsby config
-          file: gatsby-config.md
