--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,16 @@
 image: node:latest
 
-# This folder is cached between builds
-# http://docs.gitlab.com/ce/ci/yaml/README.html#cache
-cache:
-  paths:
-    - node_modules/
-
 pages:
   script:
-    - npm install
-    - ./node_modules/.bin/gatsby build --prefix-paths
+  - npm install
+  - npm install gatsby-cli
+  - node_modules/.bin/gatsby build --prefix-paths
   artifacts:
     paths:
-      - public
+    - public
+  cache:
+    paths:
+      - node_modules
   only:
-    - master
+  - master
+
