--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,18 @@ image: node:latest
 
 pages:
   script:
-  - npm install
-  - npm install gatsby-cli
-  - ./node_modules/.bin/gatsby build --prefix-paths
+  - cd docs-www
+  - yarn install
+  - yarn run build
+  - mkdir .public
+  - cp -r public/* .public
+  - mv .public ../public 
   artifacts:
     paths:
     - public
   cache:
     paths:
-      - node_modules
+      - ./docs-www/node_modules
   only:
   - master
 
