增加gitlab与docker集成的文档
增加gitlab与docker集成的文档

--- a/docs-www/gatsby-docs-kit.yml
+++ b/docs-www/gatsby-docs-kit.yml
@@ -55,6 +55,8 @@
       items:
         - title: 在Gitlab Pages上部署静态网站
           file: gitlab-pages.md
+        - title: gitlab ci与docker集成
+          file: gitlab-docker.md
 - title: nextcloud用户文档
   dir: ../docs/nextcloud-user
   url: nextcloud-user
